--- a/package.json
+++ b/package.json
@@ -1,20 +1,30 @@
 {
-  "name": "kms-tafka-v1",
-  "version": "0.1.0",
-  "description": "Key management system for private cloud storage uses.",
-  "homepage": "https://github.com/Tafka-4/kms#readme",
-  "bugs": {
-    "url": "https://github.com/Tafka-4/kms/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Tafka-4/kms.git"
-  },
-  "license": "BSD-3-Clause",
-  "author": "Tafka4",
-  "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  }
+    "name": "personal-kms",
+    "version": "0.1.0",
+    "description": "KMS scaffold with RSA-OAEP session, AES-GCM crypto, key rotation, and OpenAPI docs",
+    "type": "module",
+    "engines": {
+        "node": ">=18"
+    },
+    "scripts": {
+        "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+        "build": "tsc -p tsconfig.json --outDir build",
+        "start": "node build/server.js",
+        "lint": "echo 'No lint configured'",
+        "test": "echo 'No tests configured'",
+        "test:client": "ts-node --esm client/testClient.ts"
+    },
+    "dependencies": {
+        "express": "^4.19.2",
+        "swagger-ui-express": "^5.0.1",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.21",
+        "@types/node": "^20.14.11",
+        "@types/swagger-ui-express": "^4.1.8",
+        "ts-node": "^10.9.2",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^5.5.4"
+    }
 }
