Minor: KMS Beta Release

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,23 @@
+# Core KMS runtime configuration
 KMS_PORT=3000
-KMS_WHITELIST=100.64.0.9
+KMS_WHITELIST=127.0.0.1,::1
+# Set to ./data/keys for local runs, or /data/keys when mounting a volume in Docker
 KEY_STORE_PATH=./data/keys
 NODE_ENV=development
 
+# Session behaviour
+KMS_SESSION_TTL_MS=900000
+KMS_SESSION_SLIDING=true
+KMS_TOKEN_PREFIX=
+
+# Rate limit windows (ms) and caps
+KMS_ROTATE_WINDOW_MS=10000
+KMS_ROTATE_MAX=5
+KMS_CRYPTO_WINDOW_MS=10000
+KMS_CRYPTO_MAX=50
+KMS_KEYS_WINDOW_MS=10000
+KMS_KEYS_MAX=20
+
+# Optional client harness defaults
+CLIENT_TOKEN=example-token-change-me
+CLIENT_NEGATIVE_TESTS=false
